// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`attachHttpsRequestSpy requestSpy is called with object options 1`] = `
Url {
  "auth": "user:password",
  "hash": "#so-blue",
  "host": "example.tld:8080",
  "hostname": "example.tld",
  "href": "https://user:password@example.tld:8080/somewhere?over=rainbow#so-blue",
  "path": "/somewhere?over=rainbow",
  "pathname": "/somewhere",
  "port": "8080",
  "protocol": "https:",
  "query": "over=rainbow",
  "search": "?over=rainbow",
  "slashes": true,
}
`;

exports[`attachHttpsRequestSpy requestSpy is called with parsed options 1`] = `
Url {
  "auth": "user:password",
  "hash": "#so-blue",
  "host": "example.tld:8080",
  "hostname": "example.tld",
  "href": "https://user:password@example.tld:8080/somewhere?over=rainbow#so-blue",
  "path": "/somewhere?over=rainbow",
  "pathname": "/somewhere",
  "port": "8080",
  "protocol": "https:",
  "query": "over=rainbow",
  "search": "?over=rainbow",
  "slashes": true,
}
`;

exports[`attachHttpsRequestSpy requestSpy is called with sparse object options 1`] = `
Url {
  "auth": null,
  "hash": null,
  "host": "localhost",
  "hostname": "localhost",
  "href": "https://localhost/",
  "path": "/",
  "pathname": "/",
  "port": null,
  "protocol": "https:",
  "query": null,
  "search": null,
  "slashes": true,
}
`;

exports[`attachHttpsRequestSpy socketCloseSpy is called when the request socket closes 1`] = `
Url {
  "auth": null,
  "hash": null,
  "host": "example.tld",
  "hostname": "example.tld",
  "href": "https://example.tld/",
  "path": "/",
  "pathname": "/",
  "port": null,
  "protocol": "https:",
  "query": null,
  "search": null,
  "slashes": true,
}
`;

exports[`attachHttpsRequestSpy throws if requestSpy is not a function 1`] = `"requestSpy must be a function (was \\"undefined\\")"`;

exports[`attachHttpsRequestSpy throws if socketCloseSpy is provided but is not a function 1`] = `"socketCloseSpy must be function if provided (was \\"string\\")"`;
